# 2021RC

./: 049010410194.mvdat  MV-SUA134GC-Group0.config
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/config/: RC2021Config.h  param.h
devel/include/mv_driver/: RC2021Config.h
devel/include/yolov5/: result.h
devel/lib/config/: config_node
devel/lib/image_deal/: image_deal_node
devel/lib/imu/: imu_node
devel/lib/imu_complementary_filter/: complementary_filter_node
devel/lib/imu_filter_madgwick/: imu_filter_node
devel/lib/mv_driver/: mv_driver_node
devel/lib/pkgconfig/: config.pc  image_deal.pc  imu.pc  imu_complementary_filter.pc  imu_filter_madgwick.pc  mv_driver.pc  rviz_imu_plugin.pc  serial_com.pc  yolov5.pc
devel/lib/serial_com/: serial_com_node
devel/lib/yolov5/: yolov5_node
src/config/: CMakeLists.txt
src/config/autoRun/: 2021RC.sh  kill.sh
src/config/cfg/: RC2021.cfg  RC2021.yaml
src/config/launch/: RC2021.launch
src/config/msg/: param.msg
src/config/src/: config_node.cpp
src/image_deal/: CMakeLists.txt
src/image_deal/src/: image_deal_node.cpp
src/imu/: CMakeLists.txt  package.xml
src/imu/src/: imu_node.cpp
src/imu_complementary_filter/: CHANGELOG.rst  CMakeLists.txt
src/imu_complementary_filter/launch/: complementary_filter.launch
src/imu_complementary_filter/src/: complementary_filter_ros.cpp
src/mv_driver/: CMakeLists.txt  package.xml
src/mv_driver/src/: MVCamera.cpp  MVCamera_node.cpp
src/serial_com/: CMakeLists.txt
src/serial_com/src/: serial_com_node.cpp
src/yolov5/: CMakeLists.txt
(+44 files in other folders)
